# ERC-hackathon-2024

./: .gitignore  README.md  ROS_Setup.md
ERC-Hackathon-24/: CMakeLists.txt  package.xml
ERC-Hackathon-24/scripts/: controller.py  obstacle_detection.py  path_plan_test.py
hackathon_automation/: CMakeLists.txt  package.xml
hackathon_automation/launch/: robo.launch.py
hackathon_automation/models/bits_map/: model.config  model.sdf
hackathon_automation/src/: controller.py  get_landmarks.py  path_planner.py  requirements.txt
hackathon_automation/src/extras/: cone_set.py  map.py
hackathon_automation/worlds/: MAP.world
ros_world/: CMakeLists.txt  package.xml
ros_world/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_world/install/ros_tb3/share/ament_index/resource_index/package_run_dependencies/: ros_tb3
ros_world/install/ros_tb3/share/ament_index/resource_index/parent_prefix_path/: ros_tb3
ros_world/install/ros_tb3/share/ros_tb3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_world/install/ros_tb3/share/ros_tb3/cmake/: ros_tb3Config.cmake
ros_world/install/ros_tb3/share/ros_tb3/launch/: tb3_launch.py
ros_world/install/ros_tb3/share/ros_tb3/models/MAP/: model.config  model.sdf
ros_world/install/ros_tb3/share/ros_tb3/models/bits_map/meshes/: bits_osm_3d.obj.mtl  new_map.mtl
ros_world/launch/: robo.launch.py
ros_world/models/bits_map/: model.sdf
ros_world/src/: colour_detection.py  demo.py  obstacle_detection.py  path_plan_test.py  path_planner.py
ros_world/src/extras/: coordinate_transform.py  roads.npy
ros_world/src/ros_tb3/: CMakeLists.txt  package.xml
ros_world/src/ros_tb3/launch/: new.launch.py  tb3.launch.py
ros_world/src/ros_tb3/models/bits_map/: model.config  model.sdf
ros_world/src/ros_tb3/scripts/: map_extract.py
ros_world/src/ros_tb3/worlds/: MAP.world
ros_world/worlds/: MAP.world
ros_world/worlds/test/: MAP.world
