<package format="3">
  <name>hackathon_automation</name>
  <version>0.1.1</version>
  <description>BITS Goa Map based turtlebot3 world for ERC Hackathon 2024</description>
  <maintainer email="erc.ic@goa.bits-pilani.ac.in">ERC</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
